[package]
name = "imgui-winit-support"
version = "0.13.0"
edition = "2021"
description = "winit support code for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-winit-support"
repository = "https://github.com/imgui-rs/imgui-winit-support"
documentation = "https://docs.rs/imgui-winit-support"
license = "MIT OR Apache-2.0"
categories = ["gui"]

[dependencies]
imgui = { git = "https://github.com/zcharo99/imgui-rs", rev = "a7f7345b4529f439cdeeab6e83c0f586af7d1831" }
winit = { version = "0.30", default-features = false }
